Add BST remove method

--- a/Advance/Binary Search Tree.ipynb
+++ b/Advance/Binary Search Tree.ipynb
@@ -34,10 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class BinarySearchTree(object):\n",
@@ -50,6 +48,7 @@
     "    else:\n",
     "      self.insertNode(data, self.root);\n",
     "  \n",
+    "  # O(log N) if the tree is balanced!!!!!!! --> it can reduced to O(N) --> AVL RBT are needed!!!!\n",
     "  def insertNode(self, data, node):\n",
     "    if data < node.data:\n",
     "      if node.leftChild:\n",
@@ -60,7 +59,48 @@
     "      if node.rightChild:\n",
     "        self.insertNode(data, node.rightChild);\n",
     "      else:\n",
-    "        node.rightChild = node(data);\n",
+    "        node.rightChild = Node(data);\n",
+    "        \n",
+    "  def removeNode(self, data, node):\n",
+    "    if not node:\n",
+    "      return node;\n",
+    "    \n",
+    "    if data < node.data:\n",
+    "      node.leftChild = self.removeNode(data, node.leftChild);\n",
+    "    elif data > node.data:\n",
+    "      node.rightChild = self.removeNode(data, node.rightChild);\n",
+    "    else:\n",
+    "      if not node.leftChild and not node.rightChild:\n",
+    "        print(\"Removing a leaf node...\");\n",
+    "        del node;\n",
+    "        return None;\n",
+    "      \n",
+    "      if not node.leftChild:\n",
+    "        print(\"Removing a node with single right child...\");\n",
+    "        tempNode = node.rightChild;\n",
+    "        del node;\n",
+    "        return tempNode;\n",
+    "      elif not node.rightChild:\n",
+    "        print(\"Removing a node with single left child...\");\n",
+    "        tempNode = node.leftChild;\n",
+    "        del node;\n",
+    "        return tempNode;\n",
+    "      \n",
+    "      print(\"Removing node with two children...\");\n",
+    "      tempNode = self.getPredecessor(node.leftChild);\n",
+    "      node.data = tempNode.data;\n",
+    "      node.leftChild = self.removeNode(tempNode.data, node.leftChild);\n",
+    "    \n",
+    "    return node;\n",
+    "      \n",
+    "  def getPredecessor(self, node):\n",
+    "    if node.rightChild:\n",
+    "      return self.getPredecessor(node.rightChild);\n",
+    "    return node;\n",
+    "      \n",
+    "  def remove(self, data):\n",
+    "    if self.root:\n",
+    "      self.root = self.removeNode(data, self.root);\n",
     "  \n",
     "  def getMinValue(self):\n",
     "    if self.root:\n",
@@ -94,20 +134,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Node' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-403a45f6e60b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-28e550942211>\u001b[0m in \u001b[0;36minsert\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m      7\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsertNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0minsertNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-28e550942211>\u001b[0m in \u001b[0;36minsertNode\u001b[0;34m(self, data, node)\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsertNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrightChild\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m       \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrightChild\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mgetMinValue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'Node' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "14\n"
      ]
     }
    ],
@@ -115,10 +150,77 @@
     "bst = BinarySearchTree();\n",
     "bst.insert(10);\n",
     "bst.insert(5);\n",
-    "bst.insert(15);\n",
+    "bst.insert(13);\n",
+    "bst.insert(14);\n",
     "bst.insert(6);\n",
     "\n",
-    "print(bst.getMinValue());"
+    "print(bst.getMinValue());\n",
+    "print(bst.getMaxValue());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 \n",
+      "6 \n",
+      "10 \n",
+      "13 \n",
+      "14 \n"
+     ]
+    }
+   ],
+   "source": [
+    "bst.traverse();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removing a node with single right child...\n",
+      "6 \n",
+      "10 \n",
+      "13 \n",
+      "14 \n"
+     ]
+    }
+   ],
+   "source": [
+    "bst.remove(5)\n",
+    "bst.traverse();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removing node with two children...\n",
+      "Removing a leaf node...\n",
+      "6 \n",
+      "13 \n",
+      "14 \n"
+     ]
+    }
+   ],
+   "source": [
+    "bst.remove(10)\n",
+    "bst.traverse()"
    ]
   },
   {
