Add AVL settle Violation for balancing the tree and testings

--- a/Advance/Balanced Binary Tree (AVL).ipynb
+++ b/Advance/Balanced Binary Tree (AVL).ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -187,6 +187,47 @@
     "  \n",
     "  def __init__(self):\n",
     "    self.root = None;\n",
+    "\n",
+    "  def insert(self, data):\n",
+    "    self.root = self.insertNode(data, self.root)\n",
+    "    \n",
+    "  def insertNode(self, data, node):\n",
+    "    if not node:\n",
+    "      return Node(data)\n",
+    "    \n",
+    "    if data < node.data:\n",
+    "      node.leftChild = self.insertNode(data, node.leftChild)\n",
+    "    else:\n",
+    "      node.rightChild = self.insertNode(data, node.rightChild)\n",
+    "    \n",
+    "    node.height = max(self.calcHeight(node.leftChild), self.calcHeight(node.rightChild)) + 1\n",
+    "    \n",
+    "    return self.settleViolation(data, node)\n",
+    "  \n",
+    "  def settleViolation(self, data, node):\n",
+    "    balance = self.calcBalance(node);\n",
+    "    \n",
+    "    # case 1 -> left left heavy situation\n",
+    "    if balance > 1 and data < node.leftChild.data:\n",
+    "      print(\"Left left heavy situation...\")\n",
+    "      return self.rotateRight(node)\n",
+    "\n",
+    "    # case 2 --> right right heavy situation --> single left rotation\n",
+    "    if balance < -1 and data > node.rightChild.data:\n",
+    "      print(\"Right right heavy situation...\")\n",
+    "      return self.rotateLeft(node)\n",
+    "    \n",
+    "    if balance > 1 and data > node.leftChild.data:\n",
+    "      print(\"Left right heavy situation...\")\n",
+    "      node.leftChild = self.rotateLeft(node.leftChild);\n",
+    "      return self.rotateRight(node)\n",
+    "    \n",
+    "    if balance < -1 and data < node.rightChild.data:\n",
+    "      print(\"Right left heavy situation\")\n",
+    "      node.rightChild = self.rotateRight(node.rightChild)\n",
+    "      return self.rotateLeft(node);\n",
+    "    \n",
+    "    return node; # the tree is balance, just return the node\n",
     "    \n",
     "  def calcHeight(self, node):\n",
     "    if not node:\n",
@@ -199,6 +240,20 @@
     "    if not node:\n",
     "      return 0;\n",
     "    return self.calcHeight(node.leftChild) - self.calcHeight(node.rightChild);\n",
+    "  \n",
+    "  def traverse(self):\n",
+    "    if self.root:\n",
+    "      self.traverseInorder(self.root)\n",
+    "  \n",
+    "  def traverseInorder(self, node):\n",
+    "    if node.leftChild:\n",
+    "      self.traverseInorder(node.leftChild);\n",
+    "    \n",
+    "    print(\"%s \" % node.data);\n",
+    "    \n",
+    "    if node.rightChild:\n",
+    "      self.traverseInorder(node.rightChild);\n",
+    "      \n",
     "  \n",
     "  def rotateRight(self, node):\n",
     "    print(\"Rotating to the right on node \", node.data);\n",
@@ -218,15 +273,193 @@
     "    print(\"Rotating to the left on node \", node.data)\n",
     "    \n",
     "    tempRightChild = node.rightChild;\n",
-    "    t = tempRightchild.leftChild;\n",
+    "    t = tempRightChild.leftChild;\n",
     "    \n",
     "    tempRightChild.leftChild = node;\n",
     "    node.rightChild = t;\n",
     "    \n",
     "    node.height = max(self.calcHeight(node.leftChild), self.calcHeight(node.rightChild)) + 1 \n",
-    "    tempRightchild.height = max(self.calcHeight(tempRightchild.leftChild), self.calcHeight(tempRightchild.rightChild)) + 1\n",
+    "    tempRightChild.height = max(self.calcHeight(tempRightChild.leftChild), self.calcHeight(tempRightChild.rightChild)) + 1\n",
     "    \n",
     "    return tempRightChild; # new root node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Right right heavy situation...\n",
+      "Rotating to the left on node  10\n",
+      "10 \n",
+      "20 \n",
+      "30 \n"
+     ]
+    }
+   ],
+   "source": [
+    "avl = AVL();\n",
+    "avl.insert(10)\n",
+    "avl.insert(20)\n",
+    "avl.insert(30)\n",
+    "\n",
+    "avl.traverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left left heavy situation...\n",
+      "Rotating to the right on node  5\n",
+      "3 \n",
+      "4 \n",
+      "5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "avl2 = AVL();\n",
+    "avl2.insert(5)\n",
+    "avl2.insert(4)\n",
+    "avl2.insert(3)\n",
+    "\n",
+    "avl2.traverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Right left heavy situation\n",
+      "Rotating to the right on node  7\n",
+      "Rotating to the left on node  5\n",
+      "5 \n",
+      "6 \n",
+      "7 \n"
+     ]
+    }
+   ],
+   "source": [
+    "avl3 = AVL();\n",
+    "avl3.insert(5)\n",
+    "avl3.insert(7)\n",
+    "avl3.insert(6)\n",
+    "\n",
+    "avl3.traverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left right heavy situation...\n",
+      "Rotating to the left on node  3\n",
+      "Rotating to the right on node  5\n",
+      "3 \n",
+      "4 \n",
+      "5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "avl4 = AVL();\n",
+    "avl4.insert(5)\n",
+    "avl4.insert(3)\n",
+    "avl4.insert(4)\n",
+    "\n",
+    "avl4.traverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Right right heavy situation...\n",
+      "Rotating to the left on node  1\n",
+      "Right right heavy situation...\n",
+      "Rotating to the left on node  3\n",
+      "Right right heavy situation...\n",
+      "Rotating to the left on node  2\n",
+      "1 \n",
+      "2 \n",
+      "3 \n",
+      "4 \n",
+      "5 \n",
+      "6 \n"
+     ]
+    }
+   ],
+   "source": [
+    "avl5 = AVL();\n",
+    "avl5.insert(1)\n",
+    "avl5.insert(2)\n",
+    "avl5.insert(3)\n",
+    "avl5.insert(4)\n",
+    "avl5.insert(5)\n",
+    "avl5.insert(6)\n",
+    "\n",
+    "avl5.traverse()"
    ]
   },
   {
