Add Shorest Path Dijsktra

--- a/Advance/Graph-BFS-DFS.ipynb
+++ b/Advance/Graph-BFS-DFS.ipynb
@@ -223,7 +223,7 @@
     "    - So we have to store O(N) items if we want to traverse a tree that contains N items!!!\n",
     "    \n",
     "- DFS:\n",
-    "    - Here we have to backtrack (pop item from stack): so basically we just have to store as many items n the stack as the height of th tree -> which is log(N)!!!\n",
+    "    - Here we have to backtrack (pop item from stack): so basically we just have to store as many items n the stack as the height of the tree -> which is log(N)!!!\n",
     "    - ~ so the memory complexity will be O(logN)\n",
     "    \n",
     "- That's why depth-first search is preferred most of the times. There may be some situations where BFS is better ~ artificial intelligence, robot movements"
