--- a/Advance/Graph-Shorest Path.ipynb
+++ b/Advance/Graph-Shorest Path.ipynb
@@ -198,6 +198,175 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bellman Ford\n",
+    "- Time complexity: O(V * E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys;\n",
+    "\n",
+    "class Node(object):\n",
+    "  def __init__(self, name):\n",
+    "    self.name = name;\n",
+    "    self.visited = False;\n",
+    "    self.predecessor = None;\n",
+    "    self.adjacenciesList = [];\n",
+    "    self.minDistance = sys.maxsize;\n",
+    "    \n",
+    "class Edge(object):\n",
+    "  \n",
+    "  def __init__(self, weight, startVertex, targetVertex):\n",
+    "    self.weight = weight;\n",
+    "    self.startVertex = startVertex;\n",
+    "    self.targetVertex = targetVertex;\n",
+    "    \n",
+    "\n",
+    "class BellmanFord(object):\n",
+    "  HAS_CYCLE = False;\n",
+    "  \n",
+    "  def calculateShortestPath(self, vertexList, edgeList, startVertex):\n",
+    "    startVertex.minDistance = 0;\n",
+    "    \n",
+    "    for i in range(0, len(vertexList)-1):\n",
+    "      for edge in edgeList:\n",
+    "        \n",
+    "        u = edge.startVertex;\n",
+    "        v = edge.targetVertex;\n",
+    "        \n",
+    "        newDistance = u.minDistance + edge.weight;\n",
+    "        \n",
+    "        if newDistance < v.minDistance:\n",
+    "          v.minDistance = newDistance;\n",
+    "          v.predecessor = u;\n",
+    "          \n",
+    "    for edge in edgeList:\n",
+    "      if self.hasCycle(edge):\n",
+    "        print(\"Negative cycle detected...\");\n",
+    "        BellmanFord.Has_CYCLE = True;\n",
+    "        return;\n",
+    "\n",
+    "  def hasCycle(self, edge):\n",
+    "    if (edge.startVertex.minDistance + edge.weight) < edge.targetVertex.minDistance:\n",
+    "      return True;\n",
+    "    else:\n",
+    "      return False;\n",
+    "\n",
+    "  def getShortestPathTo(self, targetVertex):\n",
+    "\n",
+    "    if not BellmanFord.HAS_CYCLE:\n",
+    "      print(\"Shortest path exists with value: \", targetVertex.minDistance);\n",
+    "\n",
+    "      node = targetVertex;\n",
+    "\n",
+    "      while node is not None:\n",
+    "        print(\"%s \" % node.name)\n",
+    "        node = node.predecessor;\n",
+    "    else:\n",
+    "      print(\"Negative cycle detected...\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shortest path exists with value:  25\n",
+      "G \n",
+      "C \n",
+      "F \n",
+      "E \n",
+      "A \n"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = Node(\"A\")\n",
+    "node2 = Node(\"B\")\n",
+    "node3 = Node(\"C\")\n",
+    "node4 = Node(\"D\")\n",
+    "node5 = Node(\"E\")\n",
+    "node6 = Node(\"F\")\n",
+    "node7 = Node(\"G\")\n",
+    "node8 = Node(\"H\")\n",
+    "\n",
+    "edge1 = Edge(5, node1, node2)\n",
+    "edge2 = Edge(8, node1, node8)\n",
+    "edge3 = Edge(9, node1, node5)\n",
+    "edge4 = Edge(15, node2, node4)\n",
+    "edge5 = Edge(12, node2, node3)\n",
+    "edge6 = Edge(4, node2, node8)\n",
+    "edge7 = Edge(7, node8, node3)\n",
+    "edge8 = Edge(6, node8, node6)\n",
+    "edge9 = Edge(5, node5, node8)\n",
+    "edge10 = Edge(4, node5, node6)\n",
+    "edge11 = Edge(20, node5, node7)\n",
+    "edge12 = Edge(1, node6, node3)\n",
+    "edge13 = Edge(13, node6, node7)\n",
+    "edge14 = Edge(3, node3, node4)\n",
+    "edge15 = Edge(11, node3, node7)\n",
+    "edge16 = Edge(9, node4, node7)\n",
+    "\n",
+    "node1.adjacenciesList.append(edge1);\n",
+    "node1.adjacenciesList.append(edge2);\n",
+    "node1.adjacenciesList.append(edge3);\n",
+    "node2.adjacenciesList.append(edge4);\n",
+    "node2.adjacenciesList.append(edge5);\n",
+    "node2.adjacenciesList.append(edge6);\n",
+    "node8.adjacenciesList.append(edge7);\n",
+    "node8.adjacenciesList.append(edge8);\n",
+    "node5.adjacenciesList.append(edge9);\n",
+    "node5.adjacenciesList.append(edge10);\n",
+    "node5.adjacenciesList.append(edge11);\n",
+    "node6.adjacenciesList.append(edge12);\n",
+    "node6.adjacenciesList.append(edge13);\n",
+    "node3.adjacenciesList.append(edge14);\n",
+    "node3.adjacenciesList.append(edge15);\n",
+    "node4.adjacenciesList.append(edge16);\n",
+    "\n",
+    "vertexList = (node1, node2, node3, node4, node5 , node6, node7, node8);\n",
+    "edgeList = (edge1, edge2, edge3, edge4, edge5, edge6, edge7, edge8, edge9, edge10, edge11, edge12, edge13, edge14, edge15, edge16)\n",
+    "\n",
+    "algorithm = BellmanFord();\n",
+    "algorithm.calculateShortestPath(vertexList, edgeList, node1);\n",
+    "algorithm.getShortestPathTo(node7)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
