Add Prims Spanning Tree

--- a/Advance/Spanning Trees.ipynb
+++ b/Advance/Spanning Trees.ipynb
@@ -328,6 +328,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prims VS Kruskal\n",
+    "- Prim's algorithm is significantly faster in the limit when you've got a really dense graph with many more edges than vertices\n",
+    "- Kruskal performs vetter in typical situations (sparse graphs) because it used simpler data structures\n",
+    "- Kruskal can have better performance if the dges can be sorted in linear time or the edges are already sorted\n",
+    "- Prim's better if the number of edges to vertices is high (dense graphs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Vertex(object):\n",
+    "  def __init__(self, name):\n",
+    "    self.name = name;\n",
+    "    self.visited = False;\n",
+    "    self.predecessor = None;\n",
+    "    self.adjacenciesList = [];\n",
+    "    \n",
+    "  def __str__(self):\n",
+    "    return self.name;\n",
+    "  \n",
+    "class Edge(object):\n",
+    "  \n",
+    "  def __init__(self, weight, startVertex, targetVertex):\n",
+    "    self.weight = weight;\n",
+    "    self.startVertex = startVertex;\n",
+    "    self.targetVertex = targetVertex;\n",
+    "    \n",
+    "  def __cmp__(self, otherEdge):\n",
+    "    return self.cmp(self.weight, otherEdge.weight)\n",
+    "  \n",
+    "  def __lt__(self, other):\n",
+    "    selfPriority = self.weight;\n",
+    "    otherPriority = other.weight;\n",
+    "    return selfPriority < otherPriority;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import heapq;\n",
+    "\n",
+    "class PrimsJarrik(object):\n",
+    "  def __init__(self, unvisitedList):\n",
+    "    self.unvisitedList = unvisitedList;\n",
+    "    self.spanningTree = [];\n",
+    "    self.edgeHeap = [];\n",
+    "    self.fullCost = 0;\n",
+    "    \n",
+    "  def calculateSpanningTree(self, vertex):\n",
+    "    self.unvisitedList.remove(vertex)\n",
+    "\n",
+    "    while self.unvisitedList:\n",
+    "      for edge in vertex.adjacenciesList:\n",
+    "        if edge.targetVertex in self.unvistedList:\n",
+    "          heapq.heappush(self.edgeHeap, edge)\n",
+    "        \n",
+    "        minEdge = heapq.heappop(self.edgeHeap);\n",
+    "        \n",
+    "        self.spanningTree.append(minEdge);\n",
+    "        print(\"Edge added to spanning tree: %s - %s\"  % (minEdge.startVertex.name, minEdge.targetVertex.name));\n",
+    "        self.fullCost = self.fullCost + minEdge.weight;\n",
+    "        \n",
+    "        vertex = minEdge.targetVertex;\n",
+    "        self.unvisitedList.remove(vertex);\n",
+    "  \n",
+    "  def getSpanningTree(self):\n",
+    "    return self.spanningTree;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'node4' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-767eaaa8b572>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0medge2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEdge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0medge3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEdge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0medge4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEdge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0medge5\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEdge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0medge6\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEdge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'node4' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "node1 = Vertex(\"A\")\n",
+    "node2 = Vertex(\"B\")\n",
+    "node3 = Vertex(\"C\")\n",
+    "\n",
+    "\n",
+    "edge1 = Edge(100, node1, node2);\n",
+    "edge2 = Edge(100, node2, node1);\n",
+    "edge3 = Edge(1000, node1, node3);\n",
+    "edge4 = Edge(1000, node4, node1);\n",
+    "edge5 = Edge(0.01, node3, node2);\n",
+    "edge6 = Edge(0.01, node2, node3);\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
